--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
-<!-- <router-outlet></router-outlet>
- -->
-<app-home></app-home>
+<router-outlet></router-outlet>
+
+<!-- <app-home></app-home> -->
 
 <app-footer></app-footer>
